force-app/main/default/objects/Ortho_Mobile_Setting__mdt/Ortho_Mobile_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Ortho Mobile Setting</label>
    <pluralLabel>Ortho Mobile Settings</pluralLabel>
</CustomObject>