force-app/main/default/objects/Ortho_Mobile_Setting__mdt/fields/Setting_Type__c.field-meta.xml
<CustomField>
    <fullName>Setting_Type__c</fullName>
    <label>Setting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communication Group</fullName>
                <default>true</default>
                <label>Communication Group</label>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>