force-app/main/default/objects/Ortho_Mobile_Setting__mdt/fields/Test_Context__c.field-meta.xml
<CustomField>
    <fullName>Test_Context__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Context</label>
    <type>Checkbox</type>
</CustomField>