force-app/main/default/objects/Ortho_Mobile_Setting__mdt/fields/Trigger_Context__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Context__c</fullName>
    <description>Triggers only. Context for the Trigger Setting</description>
    <label>Trigger Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>