force-app/main/default/objects/Ortho_Mobile_Setting__mdt/fields/Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only used for trigger settings. Select to Disable Trigger for Context</description>
    <label>Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>