force-app/main/default/objects/Ortho_Mobile_Setting__mdt/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <description>Name of Trigger</description>
    <label>Trigger Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>