force-app/main/default/objects/Ortho_Mobile_Setting__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Setting Value</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>